[project]
name = "modelfeedback"
version = "0.1.0"
description = ""
authors = [
    {name = "Bruno Mesquita Zamberlan",email = "brunomesquitazamberlan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.41.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "supabase (>=2.11.0,<3.0.0)"
]


[tool.poetry.dependencies]
python = ">=3.11,<4.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
